crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-arrow_clickbench_q28_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q28"
---
+---------------+-----------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                        |
+---------------+-----------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: l DESC NULLS FIRST, fetch=25                                                                                          |
|               |   Projection: hits.CounterID, avg(length(hits.URL)) AS l, count(Int64(1)) AS c                                              |
|               |     Filter: count(Int64(1)) > Int64(100000)                                                                                 |
|               |       Aggregate: groupBy=[[hits.CounterID]], aggr=[[avg(CAST(length(hits.URL) AS Float64)), count(Int64(1))]]               |
|               |         Filter: hits.URL != LargeUtf8("")                                                                                   |
|               |           TableScan: hits projection=[CounterID, URL]                                                                       |
| physical_plan | SortPreservingMergeExec: [l@1 DESC], fetch=25                                                                               |
|               |   ProjectionExec: expr=[CounterID@0 as CounterID, avg(length(hits.URL))@1 as l, count(Int64(1))@2 as c]                     |
|               |     SortExec: TopK(fetch=25), expr=[avg(length(hits.URL))@1 DESC], preserve_partitioning=[true]                             |
|               |       FilterExec: count(Int64(1))@2 > 100000                                                                                |
|               |         AggregateExec: mode=FinalPartitioned, gby=[CounterID@0 as CounterID], aggr=[avg(length(hits.URL)), count(Int64(1))] |
|               |           RepartitionExec: partitioning=Hash([CounterID@0], 16), input_partitions=16                                        |
|               |             AggregateExec: mode=Partial, gby=[CounterID@0 as CounterID], aggr=[avg(length(hits.URL)), count(Int64(1))]      |
|               |               FilterExec: URL@1 !=                                                                                          |
|               |                 SchemaCastScanExec                                                                                          |
|               |                   BytesProcessedExec                                                                                        |
|               |                     DataSourceExec: partitions=16, partition_sizes=[<redacted>]                                             |
|               |                                                                                                                             |
+---------------+-----------------------------------------------------------------------------------------------------------------------------+
