crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-arrow_clickbench_q29_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q29"
---
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                   |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: CAST(k AS LargeUtf8) AS k, l, c, min(hits.Referer)                                                                                                                                                                                                                                                         |
|               |   Sort: l DESC NULLS FIRST, fetch=25                                                                                                                                                                                                                                                                                   |
|               |     Projection: regexp_replace(hits.Referer,Utf8("^https?://(?:www\.)?([^/]+)/.*$"),Utf8("\1")) AS k, avg(length(hits.Referer)) AS l, count(Int64(1)) AS c, min(hits.Referer)                                                                                                                                          |
|               |       Filter: count(Int64(1)) > Int64(100000)                                                                                                                                                                                                                                                                          |
|               |         Aggregate: groupBy=[[regexp_replace(CAST(hits.Referer AS Utf8View), Utf8View("^https?://(?:www\.)?([^/]+)/.*$"), Utf8View("\1")) AS regexp_replace(hits.Referer,Utf8("^https?://(?:www\.)?([^/]+)/.*$"),Utf8("\1"))]], aggr=[[avg(CAST(length(hits.Referer) AS Float64)), count(Int64(1)), min(hits.Referer)]] |
|               |           Filter: hits.Referer != LargeUtf8("")                                                                                                                                                                                                                                                                        |
|               |             TableScan: hits projection=[Referer]                                                                                                                                                                                                                                                                       |
| physical_plan | ProjectionExec: expr=[CAST(k@0 AS LargeUtf8) as k, l@1 as l, c@2 as c, min(hits.Referer)@3 as min(hits.Referer)]                                                                                                                                                                                                       |
|               |   RepartitionExec: partitioning=RoundRobinBatch(16), input_partitions=1, maintains_sort_order=true                                                                                                                                                                                                                     |
|               |     SortPreservingMergeExec: [l@1 DESC], fetch=25                                                                                                                                                                                                                                                                      |
|               |       ProjectionExec: expr=[regexp_replace(hits.Referer,Utf8("^https?://(?:www\.)?([^/]+)/.*$"),Utf8("\1"))@0 as k, avg(length(hits.Referer))@1 as l, count(Int64(1))@2 as c, min(hits.Referer)@3 as min(hits.Referer)]                                                                                                |
|               |         SortExec: TopK(fetch=25), expr=[avg(length(hits.Referer))@1 DESC], preserve_partitioning=[true]                                                                                                                                                                                                                |
|               |           FilterExec: count(Int64(1))@2 > 100000                                                                                                                                                                                                                                                                       |
|               |             AggregateExec: mode=FinalPartitioned, gby=[regexp_replace(hits.Referer,Utf8("^https?://(?:www\.)?([^/]+)/.*$"),Utf8("\1"))@0 as regexp_replace(hits.Referer,Utf8("^https?://(?:www\.)?([^/]+)/.*$"),Utf8("\1"))], aggr=[avg(length(hits.Referer)), count(Int64(1)), min(hits.Referer)]                     |
|               |               RepartitionExec: partitioning=Hash([regexp_replace(hits.Referer,Utf8("^https?://(?:www\.)?([^/]+)/.*$"),Utf8("\1"))@0], 16), input_partitions=16                                                                                                                                                         |
|               |                 AggregateExec: mode=Partial, gby=[regexp_replace(CAST(Referer@0 AS Utf8View), ^https?://(?:www\.)?([^/]+)/.*$, \1) as regexp_replace(hits.Referer,Utf8("^https?://(?:www\.)?([^/]+)/.*$"),Utf8("\1"))], aggr=[avg(length(hits.Referer)), count(Int64(1)), min(hits.Referer)]                           |
|               |                   FilterExec: Referer@0 !=                                                                                                                                                                                                                                                                             |
|               |                     SchemaCastScanExec                                                                                                                                                                                                                                                                                 |
|               |                       BytesProcessedExec                                                                                                                                                                                                                                                                               |
|               |                         DataSourceExec: partitions=16, partition_sizes=[<redacted>]                                                                                                                                                                                                                                    |
|               |                                                                                                                                                                                                                                                                                                                        |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
