crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-arrow_clickbench_q2_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q2"
---
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                            |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: count(Int64(1)) AS count(*)                                                                                                         |
|               |   Aggregate: groupBy=[[]], aggr=[[count(Int64(1))]]                                                                                             |
|               |     Projection:                                                                                                                                 |
|               |       Filter: hits.AdvEngineID != Int16(0)                                                                                                      |
|               |         TableScan: hits projection=[AdvEngineID]                                                                                                |
| physical_plan | ProjectionExec: expr=[count(Int64(1))@0 as count(*)]                                                                                            |
|               |   AggregateExec: mode=Final, gby=[], aggr=[count(Int64(1))]                                                                                     |
|               |     CoalescePartitionsExec                                                                                                                      |
|               |       AggregateExec: mode=Partial, gby=[], aggr=[count(Int64(1))]                                                                               |
|               |         ProjectionExec: expr=[]                                                                                                                 |
|               |           FilterExec: AdvEngineID@0 != 0                                                                                                        |
|               |             SchemaCastScanExec                                                                                                                  |
|               |               BytesProcessedExec                                                                                                                |
|               |                 DataSourceExec: partitions=16, partition_sizes=[380, 380, 380, 380, 380, 380, 380, 380, 380, 380, 380, 380, 379, 379, 379, 465] |
|               |                                                                                                                                                 |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
